# mas_domestic_datasets

./: .gitattributes  .gitlab-ci.yml  .lfsconfig  README.md
generic/mds_pointclouds/: CMakeLists.txt  package.xml
mas_datasets/: CMakeLists.txt  package.xml
mas_domestic_datasets/: CMakeLists.txt  package.xml
mds_home_setups/: CMakeLists.txt  package.xml
mds_home_setups/objects/shelf/: 20201009-c69_black_shelves_empty.bag  20201009-c69_white_shelves_empty.bag
mds_home_setups/objects/table/: no_object.pcd  noodle_box.bag  small_ketchup.pcd  small_ketchup_cappuccino.pcd  small_ketchup_unknown_object.pcd  unknown_object.pcd
mds_home_setups/people/single_persons/: person_in_apartment_environment_1.pcd  person_in_apartment_environment_2.pcd  person_in_apartment_environment_3.pcd
