<?xml version="1.0"?>
<package>
  <name>mds_home_setups</name>
  <version>0.0.1</version>
  <description>
    Various point cloud datasets
  </description>

  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>

  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
